--- a/style.css
+++ b/style.css
@@ -1,3 +1,22 @@
-background:{
-    background-image:url()
+body {
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+}
+
+table {
+    text-align: center;
+}
+th {
+    background-color: #333;
+    color: aliceblue;
+    padding: 20px;
+    border: 2px #000 solid;
+
+}
+
+td {
+    padding: 20px;
+    border: 2px #000 solid;
+
 }
