--- a/style.css
+++ b/style.css
@@ -1,22 +1,20 @@
-body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    text-align: center;
+section {
+    margin: 2em 1em;
 }
 
-table {
-    text-align: center;
-}
-th {
-    background-color: #333;
-    color: aliceblue;
-    padding: 20px;
-    border: 2px #000 solid;
+
+label {
+    display: block;
 
 }
 
-td {
-    padding: 20px;
-    border: 2px #000 solid;
+label input {
+    display: block;
+}
+input {
+    width: 3em
+}
 
+display {
+    background-color: brown;
 }
